-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.10.1, 5.11
-
None
-
Windows 10 x64 Insider Preview
Mingw32 32bits
I just try to use the text edito example with the webgl platform plugin.
It crashes here:QOpenGLContext::makeCurrent qopenglcontext.cpp:1024
I don't have the rest of the stacktrace :/
Here is the (weird) log:
Debugging starts QML debugging is enabled. Only use this in a safe environment. DLL_PROCESS_ATTACH:[D:\Qt\Examples\Qt-5.10.0\quickcontrols2\build-texteditor-Desktop_Qt_5_10_1_MinGW_32bit2-Debug\debug\texteditor.exe] pm[1] pcPath[C:\Program Files (x86)\Razer\Razer Cortex\ProcessCapturer.exe] CheckHookPath start 2,D:\Programmes\Steam\steamapps\common\YookaLayleeToybox 5,D:\Programmes\Diablo III\x64 5,D:\Programmes\Hearthstone 2,D:\Programmes\Steam\steamapps\common\Team Fortress 2 2,D:\Programmes\Steam\steamapps\common\Sega Classics 2,D:\Programmes\Steam\steamapps\common\Terraria 5,D:\Programmes\StarCraft II\Versions\Base60321 2,D:\Programmes\Steam\steamapps\common\Robocraft 2,D:\Programmes\Steam\steamapps\common\Gigantic\Binaries\Win64 2,D:\Programmes\Steam\steamapps\common\Fallout 3 goty 5,D:\Programmes\Heroes of the Storm\Versions\Base60522 2,D:\Programmes\Steam\steamapps\common\swkotor 2,D:\Programmes\Steam\steamapps\common\TimeClickers 2,D:\Programmes\Steam\steamapps\common\Jedi Outcast\GameData 2,D:\Programmes\Steam\steamapps\common\FINAL FANTASY XIII 2,D:\Programmes\Steam\steamapps\common\The Talos Principle\Bin\x64 5,D:\Programmes\StarCraft 2,D:\Programmes\Steam\steamapps\common\Jedi Academy\GameData 2,D:\Programmes\Steam\steamapps\common\Counter-Strike Source 2,D:\Programmes\Steam\steamapps\common\DiggerWorld 2,D:\Programmes\Steam\steamapps\common\Star Wars The Force Unleashed 2 2,D:\Programmes\Steam\steamapps\common\Counter-Strike Global Offensive 2,D:\Programmes\Steam\steamapps\common\YookaLaylee 2,D:\Programmes\Steam\steamapps\common\SteamVRPerformanceTest\bin\win64 2,D:\Programmes\Steam\steamapps\common\Clicker Heroes CheckHookPath end CheckHookFullPath start CheckFullPathHookMatch start 2,D:\Programmes\Steam\steamapps\common\YookaLayleeToybox\Toybox64.exe 5,D:\Programmes\Diablo III\x64\Diablo III.exe 5,D:\Programmes\Diablo III\x64\DiabloIII64.exe 5,D:\Programmes\Hearthstone\Hearthstone.exe 2,D:\Programmes\Steam\steamapps\common\Team Fortress 2\hl2.exe 2,D:\Programmes\Steam\steamapps\common\Sega Classics\SEGAGameRoom.exe 2,D:\Programmes\Steam\steamapps\common\Terraria\Terraria.exe 5,D:\Programmes\StarCraft II\Versions\Base60321\SC2.exe 5,D:\Programmes\StarCraft II\Versions\Base60321\SC2_x64.exe 2,D:\Programmes\Steam\steamapps\common\Robocraft\Robocraft.exe 2,D:\Programmes\Steam\steamapps\common\Gigantic\Binaries\Win64\RxGame-Win64-Shipping.exe 2,D:\Programmes\Steam\steamapps\common\Fallout 3 goty\FalloutLauncher.exe 5,D:\Programmes\Heroes of the Storm\Versions\Base60522\HeroesOfTheStorm.exe 5,D:\Programmes\Heroes of the Storm\Versions\Base60522\HeroesOfTheStorm_x64.exe 2,D:\Programmes\Steam\steamapps\common\swkotor\swkotor.exe 2,D:\Programmes\Steam\steamapps\common\TimeClickers\TimeClickers.exe 2,D:\Programmes\Steam\steamapps\common\Jedi Outcast\GameData\jk2sp.exe 2,D:\Programmes\Steam\steamapps\common\FINAL FANTASY XIII\FFXiiiLauncher.exe 2,D:\Programmes\Steam\steamapps\common\The Talos Principle\Bin\x64\Talos.exe 5,D:\Programmes\StarCraft\StarCraft.exe 2,D:\Programmes\Steam\steamapps\common\Jedi Academy\GameData\jasp.exe 2,D:\Programmes\Steam\steamapps\common\Counter-Strike Source\HL2.exe 2,D:\Programmes\Steam\steamapps\common\DiggerWorld\SteamTestApp.exe 2,D:\Programmes\Steam\steamapps\common\Star Wars The Force Unleashed 2\SWTFU2.exe 2,D:\Programmes\Steam\steamapps\common\Counter-Strike Global Offensive\csgo.exe 2,D:\Programmes\Steam\steamapps\common\YookaLaylee\YookaLaylee64.exe 2,D:\Programmes\Steam\steamapps\common\SteamVRPerformanceTest\bin\win64\vr.exe 2,D:\Programmes\Steam\steamapps\common\Clicker Heroes\Clicker Heroes.exe CheckFullPathHookMatch end CheckHookFullPath end This app is not contained in hook (full)path, So we don't handle it windows\dwm\dwmapi\attribute.cpp(132)\dwmapi.dll!736D3FDB: (caller: 737A26A8) ReturnHr(1) tid(38e4) 80070006 Descripteur non valide windows\dwm\dwmapi\attribute.cpp(132)\dwmapi.dll!736D3FDB: (caller: 737A26A8) ReturnHr(2) tid(35f8) 80070006 Descripteur non valide windows\dwm\dwmapi\attribute.cpp(132)\dwmapi.dll!736D3FDB: (caller: 737A26A8) ReturnHr(3) tid(1e88) 80070006 Descripteur non valide windows\dwm\dwmapi\attribute.cpp(132)\dwmapi.dll!736D3FDB: (caller: 737A26A8) ReturnHr(4) tid(23c8) 80070006 Descripteur non valide QML Debugger: Waiting for connection on port 60553... This plugin does not support dynamic OpenGL loading! windows\dwm\dwmapi\attribute.cpp(132)\dwmapi.dll!736D3FDB: (caller: 737A26A8) ReturnHr(5) tid(4e0) 80070006 Descripteur non valide qt.qpa.webgl: Message received before connect \{"type":"keyup","key":"Control","which":17,"location":1,"repeat":false,"ctrlKey":false,"shiftKey":false,"altKey":false,"metaKey":false,"string":"\u0011","keyCode":17,"charCode":0,"time":1517056350012} qt.qpa.webgl: Message received before connect \{"type":"keyup","key":"r","which":82,"location":0,"repeat":false,"ctrlKey":false,"shiftKey":false,"altKey":false,"metaKey":false,"string":"R","keyCode":82,"charCode":0,"time":1517056350059}
For Gerrit Dashboard: QTBUG-66031 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
219942,2 | Return event id instead of deleted event | 5.11 | qt/qtwebglplugin | Status: MERGED | +2 | 0 |