Return event id instead of deleted event

Under some situations, the QWebGLFunctionCall is destroyed before
getting the event id. Increasing the lifetime of the event makes no
sense so instead of that, the id can be returned and passed to the query
function.

Task-number: QTBUG-66031
Change-Id: Iba755b8154fba3fadf81a1a73c87d16f0e31c4f3
Reviewed-by: Michael Winkelmann <michael.winkelmann@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>